--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" sizes="any" href="images/favikon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles.css">
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> главная страница</title>
-    <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38">
+    <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38" />
   </head>
   <body>
     <header class="page-header">
     <!-- Шапка главной страницы -->
+    <a class="brend" href="index.html" aria-current="page">
+      <img src="images/brand-sedona.png" alt="Бренд логотипа Седоны">
+      <!-- Основной логотип города Седоны-->
+    </a>
       <nav class="navigation">
       <!-- Меню навигации -->
-        <a class="navigation-logo" href="index.html" aria-current="page">
-          <img class="page-header-logo" src="images/brand-sedona.png" alt="Бренд логотипа Седоны">
-          <!-- Основной логотип города Седоны-->
-        </a>
         <ul class="navigation-list">
         <!-- Список первой части меню -->
           <li class="navigation-item">
