Заканчивает исправление над разметкой.

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" sizes="any" href="images/favikon.svg" type="image/svg+xml">
-    <!-- <link rel="stylesheet" href="styles/styles.css"> -->
+    <link rel="stylesheet" href="styles/styles.css">
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> список гостиниц в Седоне</title>
     <!-- <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38"/> -->
   </head>
@@ -79,7 +79,7 @@
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
         <!-- Форма поисковых наборов -->
           <h2 class="visually-hidden">Поисковые формы</h2>
-          <!-- Подзаголовок поисковых наборов (невидимый) -->
+          <!-- Подзаголовок поисковых наборов (скрытый) -->
           <fieldset class="catalog-filter-infrastructure">
           <!-- Набор полей инфраструктуры -->
             <legend class="catalog-filter-title">Инфраструктура:</legend>
@@ -151,7 +151,7 @@
       <section class="catalog-results" data-test="catalog">
       <!-- Вторая секция - форма полей результатов -->
         <h2 class="catalog-results-title" class="visually-hidden">Результат нашедших нужных гостиниц</h2>
-        <!-- Результат нужных гостиниц (невидимый) -->
+        <!-- Результат нужных гостиниц (скрытый) -->
         <p>Найдено гостиниц:
           <span>38</span>
         </p>
@@ -181,8 +181,8 @@
       </section>
       <section class="catalog-hotels-list">
       <!-- Третья секция - форма поиска нужных гостиниц -->
-        <h2 class="visually-hidden">Список гостиниц города Седоны</h2>
-        <!-- Подзаголовок формы поиска гостиниц (невидимый) -->
+        <h2 class="visually-hidden">Примерный список гостиниц города Седоны</h2>
+        <!-- Подзаголовок формы поиска гостиниц (скрытый) -->
         <form class="catalog-hotels-list-sedona">
         <!-- Список-фильтр гостиниц Седоны на выбор -->
           <fieldset class="hotel-card-1">
