--- a/4/catalog.html
+++ b/4/catalog.html
@@ -2,20 +2,20 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" sizes="any" href="images/favikon.svg" type="image/svg+xml">
-    <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> Каталог гостиниц в Седоне</title>
-    <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38">
+    <link rel="stylesheet" href="styles/styles.css">
+    <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> список гостиниц в Седоне</title>
+    <!-- <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38"/> -->
     <base href="https://htmlacademy-htmlcss.github.io/2288781-sedona-38/4/">
 </head>
   <body>
     <header class="page-header">
     <!-- Шапка главной страницы -->
-      <h1 class="page-header-title visually-hidden">База данных гостиниц Седона</h1>
-      <!-- Заголовок главной страницы (невидимый) -->
-        <nav class="navigation">
-        <!-- Меню навигации -->
-        <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" alt="Бренд логотипа Седоны" src="images/logo/brand-sedona.png" >
+      <nav class="navigation">
+      <!-- Меню навигации -->
+        <a class="brend" href="index.html">
+          <img src="#" alt="Бренд логотипа Седоны" type="image/svg+xml" aria-current="page">
           <!-- Основной логотип города Седоны-->
         </a>
         <ul class="navigation-list">
@@ -27,59 +27,60 @@
             <a class="navigation-link" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
+            <a class="navigation-link" href="catalog.html" aria-current="page">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list2">
-        <!-- Список второй части меню -->
-          <li class="navigation-list2-item">
-            <a class="navigation-list2-link-quote" href="#">
-            <!-- Открытие модального окна через Поиск -->
-              <img class="navigation-list2-link-img navigation-list2-link-icon" src="images/icons/search.png" alt="Иконка - поиск">
-            </a>
-          </li>
-          <li class="navigation-list2-item">
-            <a class="navigation-list2-link-quote" href="#">
-              <img class="navigation-list2-link-img navigation-list2-link-icon"  src="images/icons/heart.png" alt="Иконка - корзина">
-            </a>
-          </li>
-          <li class="navigation-list2-item">
-            <a class="navigation-list2-item-quote" href="catalog.html">
-              <form class="navigation-list2-item-button">
-                <button class="navigation-list2-item-quote-button" type="button">
-                  <span>Хочу сюда</span>
-                </button>
-              </form>
-            </a>
-          </li>
-        </ul>
+          <!-- Список второй части меню -->
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <span src="#" type="image/svg+xml" class="visually-hidden">Поиск</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <span src="#" type="image/svg+xml" class="visually-hidden">Избранное</span>
+              </a>
+            </li>
+          </ul>
+          <a class="navigation-button" href="catalog.html">
+            <button>
+              <span>Хочу сюда!</span>
+            </button>
+          </a>
       </nav>
     </header>
     <main class="main-inner">
     <!-- Основное содержимое каталога -->
       <section class="main-inner-header">
       <!-- Первая секция - форма поиска -->
-        <h1 class="main-inner-header-title">Гостиницы в Седоне</h1>
+        <h1 class="main-inner-header-title">Гостиницы Седоны</h1>
         <!-- Заголовок каталога -->
-        <img class="main-inner-foto5" src="images/foto5.png" alt="Скалы прозрачные">
+        <img class="main-inner-kanyon-transparent" src="#" alt="Скалы прозрачные">
         <form class="breadcrumbs">
-        <!-- Поисковые значки -->
+        <!-- Поисковые символы -->
           <ul class="breadcrumbs-form">
             <li class="breadcrumbs-item">
-              <img class="breadcrumbs-icon" src="images/icons/home1.png" alt="Иконка - дом2">
+              <a class="breadcrumbs-icon" href="#">
+                <span src="#" type="image/svg+xml" class="visually-hidden">Главная</span>
+              </a>
             </li>
             <li class="breadcrumbs-item">
-              <img class="breadcrumbs-icon" src="images/icons/breadcrumbs.png" alt="Иконка - знак больше">
+              <a class="breadcrumbs-icon" href="#">
+                <span src="#" type="image/svg+xml" class="visually-hidden">Дальше</span>
+              </a>
             </li>
             <li class="breadcrumbs-item">
-              <h3 class="breadcrumbs-text">Гостиницы</h3>
+              <a class="breadcrumbs-icon" href="#">
+                <span src="#" type="image/svg+xml" class="visually-hidden">Гостиницы</span>
+              </a>
             </li>
           </ul>
         </form>
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
         <!-- Форма поисковых наборов -->
           <h2 class="visually-hidden">Поисковые формы</h2>
-          <!-- Подзаголовок поисковых наборов (невидимый) -->
+          <!-- Подзаголовок поисковых наборов (скрытый) -->
           <fieldset class="catalog-filter-infrastructure">
           <!-- Набор полей инфраструктуры -->
             <legend class="catalog-filter-title">Инфраструктура:</legend>
@@ -130,13 +131,13 @@
           </fieldset>
           <fieldset class="catalog-filter-price">
           <!-- Набор полей прайса -->
-            <div>
+            <object>
               <legend class="catalog-filter-price">Стоимость, ₽:</legend>
               <input type="number" name="min-price" id="min-price-field" value="0" placeholder="от">
               <span class="filter-hotel-price-min">от</span>
               <input type="number" name="max-price" id="max-price-field" value="9000" placeholder="до">
               <span class="filter-hotel-price-max">до</span>
-            </div>
+            </object>
             <div class="catalog-range-input">
               <input type="range" class="range-min" min="0" max="9000" value="5000" step="10">
             </div>
@@ -151,7 +152,7 @@
       <section class="catalog-results" data-test="catalog">
       <!-- Вторая секция - форма полей результатов -->
         <h2 class="catalog-results-title" class="visually-hidden">Результат нашедших нужных гостиниц</h2>
-        <!-- Результат нужных гостиниц (невидимый) -->
+        <!-- Результат нужных гостиниц (скрытый) -->
         <p>Найдено гостиниц:
           <span>38</span>
         </p>
@@ -163,21 +164,32 @@
           </select>
         </form>
         <ul>
-          <li><img src="images/icons/view-table.png" alt="Иконка - Вид с шестью ячейками"></li>
-          <li><img src="images/icons/view-slideshow.png" alt="Иконка - Компьютер"></li>
-          <li><img src="images/icons/view-list.png" alt="Иконка - Маркированный список"></li>
+          <li>
+            <a class="variant-icon" href="#">
+              <span src="#" type="image/svg+xml" class="visually-hidden">Плитка</span>
+            </a>
+          <li>
+            <a class="variant-icon" href="#">
+              <span src="#" type="image/svg+xml" class="visually-hidden">Слайд</span>
+            </a>
+          </li>
+          <li>
+            <a class="variant-icon" href="#">
+              <span src="#" type="image/svg+xml" class="visually-hidden">Список</span>
+            </a>
+          </li>
         </ul>
       </section>
       <section class="catalog-hotels-list">
       <!-- Третья секция - форма поиска нужных гостиниц -->
-        <h2 class="visually-hidden">Список гостиниц города Седоны</h2>
-        <!-- Подзаголовок формы поиска гостиниц (невидимый) -->
+        <h2 class="visually-hidden">Примерный список гостиниц города Седоны</h2>
+        <!-- Подзаголовок формы поиска гостиниц (скрытый) -->
         <form class="catalog-hotels-list-sedona">
         <!-- Список-фильтр гостиниц Седоны на выбор -->
           <fieldset class="hotel-card-1">
           <!-- Первая карточка -->
             <a class="hotel-card-1-link" href="#">
-              <img class="card-1" src="images/catalog-hotels/hotel-1-Amara-Resort-and-Spa.jpg">
+              <img class="card-1" src="#">
               <h3 class="hotel-card-1-title">Amara Resort & Spa</h3>
               <table class="hotel-card-1-name">
                 <tr>
@@ -208,7 +220,7 @@
           <fieldset class="hotel-card-2">
           <!-- Вторая карточка -->
             <a class="hotel-card-2-link" href="#">
-              <img class="card-2" src="images/catalog-hotels/hotel-2-Villas-at-Poco-Diablo.jpg">
+              <img class="card-2" src="#">
               <h3 class="hotel-card-2-title">Villas at Poco Diablo</h3>
               <table class="hotel-card-2-name">
                 <tr>
@@ -239,7 +251,7 @@
           <fieldset class="hotel-card-3">
           <!-- Третья карточка -->
             <a class="hotel-card-3-link" href="#">
-              <img class="card-3" src="images/catalog-hotels/hotel-3-Desert-Quail-Inn.jpg">
+              <img class="card-3" src="#">
               <h3 class="hotel-card-3-title">Desert Quail Inn</h3>
               <table class="hotel-card-3-name">
                 <tr>
@@ -270,7 +282,7 @@
           <fieldset class="hotel-card-4">
           <!-- Четвертая карточка -->
             <a class="hotel-card-4-link" href="#">
-              <img class="card-4" src="images/catalog-hotels/hotel-4-GreenTree-Inn.jpg">
+              <img class="card-4" src="#">
               <h3 class="hotel-card-4-title">GreenTree Inn</h3>
               <table class="hotel-card-4-name">
                 <tr>
@@ -348,42 +360,51 @@
       </section>
     </main>
     <footer class="page-footer">
-    <!-- Подвал главной страницы -->
+      <!-- Подвал главной страницы -->
         <nav class="page-footer-contacts">
         <!-- Меню навигации в подвале -->
           <ul class="footer-social-list">
           <!-- Список меню в подвале -->
             <li class="footer-social-item">
               <a class="footer-social-item-vk" href="https://t.me/htmlacademy" type="button">
-                <span><img src="images/icons/vk.png" alt="Vkontakte"  class="visually-hidden">ВКонтакте</span>
+  <!--               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="14" viewBox="0 0 24 14" fill="none">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M23.45 0.948C23.616 0.402 23.45 0 22.655 0H20.03C19.362 0 19.054 0.347 18.887 0.73C18.887 0.73 17.552 3.926 15.661 6.002C15.049 6.604 14.771 6.795 14.437 6.795C14.27 6.795 14.019 6.604 14.019 6.057V0.948C14.019 0.292 13.835 0 13.279 0H9.151C8.734 0 8.483 0.304 8.483 0.593C8.483 1.214 9.429 1.358 9.526 3.106V6.904C9.526 7.737 9.373 7.888 9.039 7.888C8.149 7.888 5.984 4.677 4.699 1.003C4.45 0.288 4.198 0 3.527 0H0.9C0.15 0 0 0.347 0 0.73C0 1.412 0.89 4.8 4.145 9.281C6.315 12.341 9.37 14 12.153 14C13.822 14 14.028 13.632 14.028 12.997V10.684C14.028 9.947 14.186 9.8 14.715 9.8C15.105 9.8 15.772 9.992 17.33 11.467C19.11 13.216 19.403 14 20.405 14H23.03C23.78 14 24.156 13.632 23.94 12.904C23.702 12.18 22.852 11.129 21.725 9.882C21.113 9.172 20.195 8.407 19.916 8.024C19.527 7.533 19.638 7.314 19.916 6.877C19.916 6.877 23.116 2.451 23.449 0.948H23.45Z" fill="#68A2CA"/>
+                </svg> -->
+                <span class="visually-hidden">ВКонтакте</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="footer-social-item-telegram" href="https://t.me/htmlacademy" type="button">
-                <span><img src="images/icons/telegram.png" alt="Telegram"  class="visually-hidden">Телеграмм</span>
+  <!--               <svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" viewBox="0 0 18 16" fill="none">
+                  <path d="M16.785 0.0992597L0.840489 6.24776C-0.247661 6.68481 -0.241365 7.29184 0.640845 7.56253L4.73445 8.83953L14.2058 2.8637C14.6537 2.59121 15.0629 2.7378 14.7265 3.03636L7.05283 9.96185H7.05103L7.05283 9.96275L6.77045 14.1823C7.18413 14.1823 7.36669 13.9925 7.59871 13.7686L9.58705 11.8351L13.7229 14.89C14.4855 15.31 15.0332 15.0941 15.2229 14.1841L17.9379 1.38885C18.2158 0.274623 17.5126 -0.229883 16.785 0.0992597Z" fill="#68A2CA"/>
+                </svg> -->
+                <span class="visually-hidden">Телеграмм</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="footer-social-item-youtube" href="https://www.youtube.com/user/htmlacademyru" type="button">
-                <span><img src="images/icons/youtube.png" alt="Youtube"  class="visually-hidden">Ютуб</span>
+  <!--               <svg xmlns="http://www.w3.org/2000/svg" width="22" height="17" viewBox="0 0 22 17" fill="none">
+                  <path d="M18.607 0H3.17413C1.31343 0 0 1.59375 0 3.4V13.4937C0 15.4062 1.31343 17 3.17413 17H18.8259C20.4677 17 22 15.4062 22 13.6V3.4C21.7811 1.59375 20.4677 0 18.607 0ZM7.66169 12.5375V4.4625L14.995 8.5L7.66169 12.5375Z" fill="#68A2CA"/>
+                </svg> -->
+                <span class="visually-hidden">Ютуб</span>
               </a>
             </li>
           </ul>
           <ul>
-            <li class="footer-social-item">
+            <li class="footer-phone">
               <a href="tel:+7(812)812-12-12">
                 <span>+7(812)812-12-12</span>
               </a>
             </li>
           </ul>
           <ul>
-            <li class="footer-social-item">
+            <li class="footer-brand">
               <a href="https://htmlacademy.ru/">
-                <span><img src="images/logo/brand-htmlacademy.png" alt="Логотип HTML academy" class="visually-hidden">HTML Академия</span>
+                <span class="visually-hidden">HTML Академия</span>
               </a>
             </li>
           </ul>
         </nav>
-    </footer>
+      </footer>
   </body>
 </html>
