:heavy_check_mark: Сборка #4

--- a/4/catalog.html
+++ b/4/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" sizes="any" href="images/favikon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="styles/styles.css">
+    <!-- <link rel="stylesheet" href="styles/styles.css"> -->
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> список гостиниц в Седоне</title>
     <!-- <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38"/> -->
     <base href="https://htmlacademy-htmlcss.github.io/2288781-sedona-38/4/">
@@ -315,7 +315,7 @@
       <section class="pagination">
         <!-- Четвертая секция - форма страниц -->
         <h2 class="visually-hidden">Страницы</h2>
-        <!-- Подзаголовок секции форм страниц (невидимый)  -->
+        <!-- Подзаголовок секции форм страниц (скрытый)  -->
         <ul class="pagination-list">
           <li class="pagination-item">
             <a href="#" class="pagination-link">
@@ -400,7 +400,7 @@
           <ul>
             <li class="footer-brand">
               <a href="https://htmlacademy.ru/">
-                <span class="visually-hidden">HTML Академия</span>
+                <span class="visually-hidden">Бренд логотипа HTML Академии</span>
               </a>
             </li>
           </ul>
