Повторно отправляет главную страницу (исправленную).

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" sizes="any" href="images/favikon.svg" type="image/svg+xml">
-    <!-- <link rel="stylesheet" href="styles/styles.css"> -->
+    <link rel="stylesheet" href="styles/styles.css">
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> список гостиниц в Седоне</title>
     <!-- <base href="https://github.com/htmlacademy-htmlcss/2288781-sedona-38"/> -->
   </head>
@@ -14,39 +14,39 @@
       <nav class="navigation">
       <!-- Меню навигации -->
         <a class="brend" href="index.html">
-          <img src="#" alt="Бренд логотипа Седоны" type="image/svg+xml" aria-current="page">
+          <img src="images/brand-sedona.svg" alt="Бренд логотипа Седоны" type="image/svg+xml" aria-current="page">
           <!-- Основной логотип города Седоны-->
         </a>
         <ul class="navigation-list">
         <!-- Список первой части меню -->
           <li class="navigation-item">
-            <a class="navigation-link" href="index.html">Главная</a>
+            <a class="navigation-link" href="index.html" aria-current="page">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html" aria-current="page">Гостиницы</a>
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list2">
-          <!-- Список второй части меню -->
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span src="#" type="image/svg+xml" class="visually-hidden">Поиск</span>
-              </a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span src="#" type="image/svg+xml" class="visually-hidden">Избранное</span>
-              </a>
-            </li>
-          </ul>
-          <a class="navigation-button" href="catalog.html">
-            <button>
-              <span>Хочу сюда!</span>
-            </button>
-          </a>
+        <!-- Список второй части меню -->
+          <li class="navigation-item">
+            <a class="navigation-link" type="image/svg+xml" href="#">
+              <span type="image/svg+xml"><img src="images/search.svg"></span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span type="image/svg+xml"><img src="images/heart.svg">12</span>
+            </a>
+          </li>
+        </ul>
+        <a class="navigation-button" href="catalog.html">
+          <button>
+            <span>Хочу сюда!</span>
+          </button>
+        </a>
       </nav>
     </header>
     <main class="main-inner">
@@ -55,7 +55,7 @@
       <!-- Первая секция - форма поиска -->
         <h1 class="main-inner-header-title">Гостиницы Седоны</h1>
         <!-- Заголовок каталога -->
-        <img class="main-inner-kanyon-transparent" src="#" alt="Скалы прозрачные">
+        <img class="main-inner-kanyon-transparent" src="images/foto5-filter.jpg" alt="Скалы прозрачные">
         <form class="breadcrumbs">
         <!-- Поисковые символы -->
           <ul class="breadcrumbs-form">
